<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.worker.details.WorkerDetailsFragment">

    <TextView
        android:id="@+id/worker_full_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:textSize="19sp"
        android:textColor="@color/colorBlackOpacity80"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/title_fullname" />

    <TextView
        android:id="@+id/worker_birthday_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textSize="17sp"
        android:textColor="@color/colorBlackOpacity40"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/worker_age_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/worker_full_name_tv"
        tools:text="@string/title_birthday" />

    <TextView
        android:id="@+id/worker_age_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textSize="16sp"
        android:textColor="@color/colorBlackOpacity40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/worker_birthday_tv"
        app:layout_constraintBottom_toBottomOf="@+id/worker_birthday_tv"
        app:layout_constraintTop_toTopOf="@+id/worker_birthday_tv"
        tools:text="@string/title_age" />


    <TextView
        android:id="@+id/worker_specialty_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="20sp"
        android:textColor="@android:color/white"
        android:background="@color/colorPink"
        android:padding="12dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/worker_birthday_tv"
        tools:text="@string/title_specialty" />


</androidx.constraintlayout.widget.ConstraintLayout>